@@ -11,6 +11,8 @@ CHANGES
   `pkg_resources.invalid_marker`. Any clients depending on the specific
   string representation of exceptions returned by that function may need to
   be updated to account for this change.
+* Issue #50: SyntaxErrors generated by `pkg_resources.invalid_marker` are
+  normalized for cross-implementation consistency.
 
 -----
 0.9.8
